Name:                Blaaargh
Version:             0.3
Synopsis:            A simple content-management system for Happstack,
                     suitable for small-to-medium-sized websites
License:             GPL
License-file:        COPYING
Author:              Gregory Collins

Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-Version:       >= 1.6

Library
    hs-source-dirs:
        src
    exposed-modules: Blaaargh
                   , Blaaargh.Time
                   , Blaaargh.Exception
                   , Blaaargh.Util.ExcludeList
                   , Blaaargh.Util.Templates
                   , Blaaargh.Types
                   , Blaaargh.Post
                   , Blaaargh.Templates
                   , Blaaargh.Handlers


    ghc-options: -Wall -funbox-strict-fields -O2 -fvia-C -optc-O3 -funfolding-use-threshold=16
    Build-Depends: base >= 4 && <5,
                   HStringTemplate,
                   bytestring,
                   ConfigFile,
                   containers,
                   directory,
                   feed,
                   filepath,
                   happstack-server >= 0.3,
                   hslogger,
                   mtl,
                   old-locale,
                   pandoc,
                   split,
                   time,
                   unix,
                   xml



Executable blaaargh
    Main-is: Standalone/BlaaarghStandalone.hs
    hs-source-dirs: src

    ghc-options: -Wall -funbox-strict-fields -fglasgow-exts -O2 -fvia-C -optc-O3 -threaded
    ghc-prof-options: -Wall -funbox-strict-fields -fglasgow-exts -O2 -fvia-C -optc-O3 -threaded -prof -auto-all
    Build-Depends: base >= 4 && <5,
                   HStringTemplate,
                   bytestring,
                   ConfigFile,
                   containers,
                   directory,
                   feed,
                   filepath,
                   happstack-server >= 0.3,
                   hslogger,
                   mtl,
                   old-locale,
                   pandoc,
                   split,
                   time,
                   unix,
                   xml
